# axum-rest-api

./: .env.example  .gitignore  Cargo.toml  README.md  test-create-user-db.sh  test-script.sh  test_load_script.sh
src/: lib.rs  main.rs
src/handlers/: errors.rs  item.rs  mod.rs  user.rs
src/middleware/: mod.rs
src/models/: mod.rs
