[package]
name = "axum-rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.6.20", features = ["headers"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql"] }
dotenvy = "0.15"

# [dev-dependencies]
# criterion = { version = "0.4", features = ["html_reports"] }

# [[bench]]
# name = "my_benchmark"
# harness = false