[package]
name = "axum-rest-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.40.1", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql"] }
dotenvy = "0.15"
thiserror = "1.0"
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono", "openapi_extensions", "time"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
tower-http = { version = "0.5.2", features = ["fs"] }
# signal-hook = "0.3.18"

# [dev-dependencies]
# criterion = { version = "0.4", features = ["html_reports"] }

# [[bench]]
# name = "my_benchmark"
# harness = false